--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@ html {
   <div class="container">
     <h2>About</h2>
     <img src="images/about/1.jpg" alt="About Me">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet dolor dolor. Suspendisse ligula elit, hendrerit ut bibendum quis, facilisis vitae est. Vivamus vitae felis sit amet sem rhoncus euismod. Praesent commodo lorem porttitor. Nam in condimentum ex. Nam accumsan nisi turpis, sed tempus dolor volutpat non. Proin id enim feugiat ipsum consectetur mattis. Nam blandit venenatis nisi, convallis imperdiet nisi condimentum at.</p>
-    <p>Duis convallis ligula sed pretium tristique. Duis nunc risus, lacinia eget cursus id, suscipit ac metus. Sed varius sed tortor congue aliquam. In in dapibus diam, in auctor purus. Praesent vitae tristique diam. Donec tincidunt hendrerit tortor, vitae lobortis purus rutrum sit amet. Nunc non arcu vitae leo rhoncus tincidunt vel sed urna. Sed sed efficitur dui. Morbi id velit nisi. Fusce luctus placerat purus eu cursus.</p>
+    <p>My name is Kevin Gopito, a recent graduate from the University of Zimbabwe, where I pursued a degree in Data Science and Systems under the Mathematics and Computational Science department. Throughout my academic journey, I developed a strong foundation in data analysis, machine learning, and systems development. I am passionate about leveraging data-driven solutions to solve complex problems and enhance decision-making processes.</p>
+<p>As I embark on my professional career, I am eager to apply my skills in a dynamic and challenging environment. I am particularly interested in roles that allow me to contribute to innovative projects, collaborate with cross-functional teams, and continue learning and growing in the field of data science and systems. I am confident that my technical expertise, analytical mindset, and commitment to excellence will make me a valuable asset to any organization.</p>
+
   </div>
 </section>
 
